[package]
name = "teleterm"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

[dependencies]
bytes = "0.4"
clap = "2"
crossterm = "0.11"
env_logger = "0.7"
futures = "0.1"
log = "0.4"
mio = "0.6"
native-tls = "0.2"
rand = "0.7"
ratelimit_meter = "5"
snafu = { version = "0.5", features = ["futures-01"] }
tokio = "0.1"
tokio-pty-process = "0.4"
tokio-signal = "0.2"
tokio-tls = "0.2"
twoway = "0.2"
uuid = { version = "0.7", features = ["v4"] }

[[bin]]
name = "tt"
path = "src/main.rs"
