[package]
name = "teleterm"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

description = "share your terminals!"
repository = "https://git.tozt.net/teleterm"
readme = "README.md"
keywords = ["terminal", "streaming"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
bytes = "0.4"
clap = "2"
config = "0.9"
crossterm = "0.11"
directories = "2"
env_logger = "0.7"
futures = "0.1"
lazy_static = "1"
log = { version = "0.4", features = ["release_max_level_info"] }
mio = "0.6"
native-tls = "0.2"
oauth2 = "3.0.0-alpha.3" # need the alpha for async support
open = "1"
rand = "0.7"
ratelimit_meter = "5"
regex = "1"
reqwest = "0.9"
serde = "1"
snafu = { version = "0.5", features = ["futures-01"] }
tokio = "0.1"
tokio-pty-process = "0.4"
tokio-signal = "0.2"
tokio-tls = "0.2"
twoway = "0.2"
url = "1"
users = "0.9"
uuid = { version = "0.7", features = ["v4"] }

[[bin]]
name = "tt"
path = "src/main.rs"
