[package]
name = "teleterm-web"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
# this isn't intended to be published on its own - we just bake the generated
# files into the main teleterm binary
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "0.1"
futures = "0.1.29"
js-sys = "0.3"
log = "0.4"
seed = "0.4"
serde = "1"
serde_json = "1"
unicode-width = "0.1"
vt100 = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ErrorEvent", "MessageEvent", "WebSocket"] }
