[package]
name = "teleterm-web"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
# this isn't intended to be published on its own - we just bake the generated
# files into the main teleterm binary
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.1"
futures = "0.1.29"
js-sys = "0.3"
log = { version = "0.4", features = ["release_max_level_error"] }
seed = "0.5"
serde = "1"
serde_json = "1"
unicode-width = "0.1"
vt100 = "0.8"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ErrorEvent", "MessageEvent", "WebSocket"] }
